--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "mongoose": "^6.7.0",
     "uuid": "^9.0.0"
   },
+  "engines": {
+    "node": "16.16.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.20"
   }
